fixed layout, alignments and styling

--- a/assets/CSS/card.css
+++ b/assets/CSS/card.css
@@ -1,8 +1,4 @@
 
-main {
-    margin: 40px 5px 70px 5px;
-  }
-  
   .card {
     position: relative;
     padding: 5px;
