--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 @import url(./assets/CSS/navbar.css);
 @import url(./assets/CSS/profile-page.css);
 @import url(./assets/CSS/bookmark-page.css);
+@import url(./assets/CSS/input.css);
 
 * {
   box-sizing: border-box;
@@ -17,13 +18,14 @@ body {
   margin-bottom: 0px;
 }
 
-p {
-  font-family: "Fira Sans", sans-serif;
+a {
+  text-decoration: none;
+  text-transform: lowercase;
+  color: black;
 }
 
-a {
-  color: black;
-  text-decoration: none;
+.mainwindow {
+  margin: 40px 5px 70px 5px;
 }
 
 /*--------DAS NICHT COPY PASTEN-----------*/
